# sentiment-classification-app

./: .dockerignore  .gitignore  DOCKER_DEPLOYMENT.md  Dockerfile.api  Dockerfile.train  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
apps/api/: main.py  schemas.py
artifacts/: .gitignore
data/processed/: .gitignore
notebooks/: imdb_sentiment.ipynb
src/sentiment/: download_data.py  evaluate_model.py  logging_config.py  path_config.py  process_data.py  train_model.py
tests/api/: test_predict.py
tests/unit/: test_processing.py
