[project]
name = "sentiment"
version = "0.1.0"
description = "Sentiment Classification"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "dvc>=3.66.1",
    "joblib>=1.5.3",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
